fixed: aligned menu to the right

--- a/src/styles/molecule/Menu.module.css
+++ b/src/styles/molecule/Menu.module.css
@@ -1,14 +1,13 @@
 /*hamburger menu button*/
 .menu {
-  align-items: center;
   display: flex;
-  /*justify-content: center;*/
-  /*margin: auto;*/
+  flex-direction: column;
 }
 
 .button {
   background-color: transparent;
   border: none;
   font-size: 1.5em;
-  margin: auto;
+  margin-left: auto;
+  margin-right: 0;
 }
